# afk-game

./: .gitignore  .oxfmtrc.json  AGENTS.md  DESKTOP.md  README.md  TODO.md  knip.json  package-lock.json  package.json  tauri-signing.key.pub  vercel.json
.claude/: launch.json
.github/workflows/: release.yml
client/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
client/src/: App.tsx  desktop.ts  index.css  main.tsx
client/src/app/: App.tsx  index.css  main.tsx
client/src/components/: BankView.tsx  Bar.tsx  CareerView.tsx  CombatView.tsx  DebugView.tsx  EquipView.tsx  FarmingView.tsx  LogPanel.tsx  OfflineModal.tsx  OnboardingModal.tsx  PrestigeView.tsx  RoadmapView.tsx  ShopView.tsx  Sidebar.tsx  SkillView.tsx  TeamView.tsx  TimerBar.tsx  ToastHost.tsx  TopBar.tsx  TutorialOverlay.tsx  UpdateChecker.tsx  brandColors.ts  icons.tsx  itemIcons.tsx
client/src/constants/: actions.ts  categories.ts  classes.ts  config.ts  farming.ts  items.ts  links.ts  maps.ts  monsters.ts  prestige.ts  (+3 more)
client/test/: combat-threshold.test.ts  combat.test.ts  helpers.ts  migrate.test.ts  modifiers.test.ts  offline.test.ts  prestige.test.ts  rank.test.ts  roadmap.test.ts  scenario.test.ts  setup-dom.ts  tick.test.ts  timing.test.ts  xp.test.ts
docs/: IMPL.md  PROGRESSION.md  SPEC.md
scripts/: gen-icon.cjs  gen-icon.mjs
server/: package.json
server/src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
workspacegameafk-game/: package-lock.json
(+67 files in other folders)
