[package]
name = "idle-engineer"
version = "0.1.0"
description = "Idle Engineer — desktop wrapper"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[profile.release]
opt-level = "s"
strip = true
