[package]
name = "afk-engineer"
version = "1.0.0"
description = "AFK Engineer — desktop wrapper"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde_json = "1"

[profile.release]
opt-level = "s"
strip = true
